# codesauce

./: .gitignore  README.md  codesauce.py  directory_structure.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATES/: bug_report.md  development_documentation.md  feature_request.md
codesauce/: __init__.py  __main__.py
codesauce/actions/: __init__.py  function_call.py  general_interaction.py  generate_code.py  generate_code_generated.py  input.py  new_code.md  optimize_code.py  restructure_directory.py.py  understand_directory.py
codesauce/config/: __init__.py  config.py
codesauce/functions/: clean_code_functions.py  directory_functions.py  function_definitions.py  generate_code_functions.py
codesauce/modules/: __init__.py  chatbot.py  function_call.py  function_interaction.py  general_interaction.py  interaction.py  understand_directory.py
codesauce/prompts/: code_clean_prompts.py  code_generation_prompts.py  philosophy.py  project_prompts.py  system_prompt_builder.py  user_prompt_builder.py
codesauce/prompts/clean/: code_clean_prompts.py
codesauce/prompts/generate/: code_generation_prompts.py
codesauce/src/: __init__.py  codesauce.py
codesauce/tools/: chunk_code.py  loader.py
codesauce/utils/: cli.py  colors.py  display.py  file_extensions.py
config/: .env.test
docs/func_examples/: action_class_placeholder.py
docs/log_examples/: directory_structure.md
docs/log_examples/chat_history/: chat_log_2023-07-07_13-06-17.json  chat_log_2023-07-07_18-13-12.json
docs/roadmap/: integration_ideas.md  integration_steps.md
(+9 files in other folders)
