[project]
name = "codesauce"
authors = [{name = "Brette Geary", email = "hackedbg@outlook.com"}]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "questionary",
    "colored",

]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "black",
]

[build-system]
requires = ["setuptools", "wheel"]